[package]
name = "DIFRR"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.26", features = ["derive"] }
image = "0.25.5"
indicatif = "0.17.9"
ndarray = {version = "0.16.1", features = ["serde"]}
ndarray-linalg = "0.16.0"
ort = "=2.0.0-rc.9"
rayon = "1.10.0"
serde = {version = "1.0.217", features = ["derive"]}
